<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>jp.naist.se.selogger</groupId>
  <artifactId>selogger</artifactId>
  <version>0.2.3</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>tests</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
        <configuration>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <transformers>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <manifestEntries>
                <Premain-Class>selogger.weaver.RuntimeWeaver</Premain-Class>
              </manifestEntries>
            </transformer>
          </transformers>
          <relocations>
            <relocation>
              <pattern>org.objectweb.asm</pattern>
              <shadedPattern>selogger.org.objectweb.asm</shadedPattern>
            </relocation>
            <relocation>
              <pattern>com.fasterxml.jackson.core</pattern>
              <shadedPattern>selogger.com.fasterxml.jackson.core</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.ow2.asm</groupId>
  		<artifactId>asm</artifactId>
  		<version>9.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.ow2.asm</groupId>
  		<artifactId>asm-tree</artifactId>
  		<version>9.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.ow2.asm</groupId>
  		<artifactId>asm-commons</artifactId>
  		<version>9.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.ow2.asm</groupId>
  		<artifactId>asm-util</artifactId>
  		<version>9.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.ow2.asm</groupId>
  		<artifactId>asm-analysis</artifactId>
  		<version>9.0</version>
  	</dependency>
    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>2.12.1</version>
    </dependency>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.13.1</version>
  		<scope>test</scope>
  	</dependency>
  </dependencies>
</project>